import { View, Text, StyleSheet, TouchableOpacity, Image } from "react-native";
import React from "react";

const DashboardScreen = ({ navigation }) => {
  return (
    <View testID="dashboardScreen" style={styles.container}>
      {/* Top Image */}
      <View style={styles.topImageContainer}>
        <Image source={require("../assets/topVector.png")} style={styles.topImage} />
      </View>

      {/* Greeting */}
...
          <Text style={styles.listItem}>✅ Ensures code stability and reliability</Text>
        </View>
      </View>

      {/* Logout Button */}
      <TouchableOpacity 
        testID="logoutButton" 
        style={styles.logoutButton} 
        onPress={() => navigation?.navigate("Login")}
      >
        <Text style={styles.logoutButtonText}>Logout</Text>
      </TouchableOpacity>
    </View>
...
